--- a/Bimestral/juegos.html
+++ b/Bimestral/juegos.html
@@ -1,35 +1,48 @@
-<!doctype html>
+!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Canvas Básico</title>
+        <title>Canvas básico</title>
         <style>
-            #canvasl
-            {  border:dotted 3px yellow;
-            background: green;
+            #miCanvas
+            {
+                border: dotted 3px yellow;
+                background: green;
             }
         </style>
         <script>
-            window.onload = function ()
+            window.onload = function()
             {
-                var canvas = document . getElementById( "canvas1") ;
+                var canvas = document.getElementById("miCanvas");
                 if(canvas && canvas.getContext)
                 {
-                    var ctx = canvas.getContext ("2d");
+                    var ctx = canvas.getContext("2d");
                     if(ctx)
                     {
-                        alert ("Bienvenido a CANVAS");
+                        //Definición de colores
+                        ctx.fillStyle = "yellow";
+                        ctx.strokeStyle = "#ff0000";
+                        ctx.lineWidth = 5;
+
+                        //Rectángulos
+                        ctx.fillRect(50, 50, 100, 100);
+                        ctx.strokeRect(50, 50, 100, 100);
+
+                        //otro cuadro
+                        ctx.fillStyle = "rgba(250, 0, 0, 0.3)";
+                        ctx.fillRect(200, 50, 100, 100);
+                        ctx.strokeRect(200,50,100,100);
                     }
                     else
                     {
-                        alert ("Error al crear el contexto " ) ;
+                        alert("Error al crear el contexto");
                     }
                 }
             }
         </script>
     </head>
     <body>
-        <h1>Conceptos básicos de CANVAS</h1>
-            <canvas id="miCanvas" width= "500px" height="300px ">Tu navegador no soporta CANVAS</canvas>
+        <h1>conceptos básicos de Canvas</h1>
+        <canvas id="miCanvas" width="500px" height="300px">Tu navegador no soporta canvas</canvas>
     </body>
 </html>
